[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0.972549, 0.972549, 0.972549, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0117647, 0.0117647, 0.0117647, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="InputEventAction" id=5]
action = "ui_restart"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 34
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="score_label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.389
anchor_right = 0.5
anchor_bottom = 0.389
margin_left = -160.0
margin_top = -74.06
margin_right = 160.0
margin_bottom = 189.94
custom_fonts/font = SubResource( 1 )
text = "Dodge
your 
friends!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="start_button" type="Button" parent="."]
anchor_left = 0.504167
anchor_top = 1.00741
anchor_right = 0.504167
anchor_bottom = 1.00741
margin_left = -196.0
margin_top = -152.001
margin_right = 202.0
margin_bottom = -52.0014
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )
shortcut = SubResource( 6 )
text = "R   to   restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -340.5
margin_top = -225.0
margin_right = 340.5
margin_bottom = -150.0
custom_fonts/font = SubResource( 7 )
text = "music  by  themistoklik
avatars  by  Dimitri"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
